@@ -259,9 +259,7 @@ class VirtualEnv(object):
             l.append("--pre")
         return l
 
-    def run_install_command(self, packages, options=(),
-                            indexserver=None, action=None,
-                            extraenv=None):
+    def run_install_command(self, packages, options=(), action=None):
         argv = self.envconfig.install_command[:]
         # use pip-script on win32 to avoid the executable locking
         i = argv.index('{packages}')
@@ -277,10 +275,7 @@ class VirtualEnv(object):
                 pass
         old_stdout = sys.stdout
         sys.stdout = codecs.getwriter('utf8')(sys.stdout)
-        if extraenv is None:
-            extraenv = {}
-        self._pcall(argv, cwd=self.envconfig.config.toxinidir,
-                    extraenv=extraenv, action=action)
+        self._pcall(argv, cwd=self.envconfig.config.toxinidir, action=action)
         sys.stdout = old_stdout
 
     def _install(self, deps, extraopts=None, action=None):
@@ -302,31 +297,26 @@ class VirtualEnv(object):
             assert ixserver.url is None or isinstance(ixserver.url, str)
 
         for ixserver in l:
-            if self.envconfig.config.option.sethome:
-                extraenv = hack_home_env(
-                    homedir=self.envconfig.envtmpdir.join("pseudo-home"),
-                    index_url=ixserver.url)
-            else:
-                extraenv = {}
-
             packages = d[ixserver]
             options = self._installopts(ixserver.url)
             if extraopts:
                 options.extend(extraopts)
             self.run_install_command(packages=packages, options=options,
-                                     action=action, extraenv=extraenv)
+                                     action=action)
 
     def _getenv(self, extraenv={}):
         if extraenv is None:
-            # for executing tests
+            # for executing tests we construct a clean environment
             env = {}
             for envname in self.envconfig.passenv:
                 if envname in os.environ:
                     env[envname] = os.environ[envname]
         else:
-            # for executing install commands
+            # for executing non-test commands we use the full
+            # invocation environment
             env = os.environ.copy()
 
+        # in any case we honor per-testenv setenv configuration
         env.update(self.envconfig.setenv)
 
         env['VIRTUAL_ENV'] = str(self.path)
@@ -405,24 +395,3 @@ def getdigest(path):
         return "0" * 32
     return path.computehash()
 
-
-def hack_home_env(homedir, index_url=None):
-    # XXX HACK (this could also live with tox itself, consider)
-    # if tox uses pip on a package that requires setup_requires
-    # the index url set with pip is usually not recognized
-    # because it is setuptools executing very early.
-    # We therefore run the tox command in an artifical home
-    # directory and set .pydistutils.cfg and pip.conf files
-    # accordingly.
-    if not homedir.check():
-        homedir.ensure(dir=1)
-    d = dict(HOME=str(homedir))
-    if not index_url:
-        index_url = os.environ.get("TOX_INDEX_URL")
-    if index_url:
-        homedir.join(".pydistutils.cfg").write(
-            "[easy_install]\n"
-            "index_url = %s\n" % index_url)
-        d["PIP_INDEX_URL"] = index_url
-        d["TOX_INDEX_URL"] = index_url
-    return d
